// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Expressions -In > Expressions -In > "any-string" 1`] = `
{
  "body": [
    {
      "directive": "any-string",
      "expression": {
        "raw": ""any-string"",
        "type": "Literal",
        "value": "any-string",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions -In > Expressions -In > "any-string" 2`] = `
{
  "body": [
    {
      "directive": "any-string",
      "expression": {
        "raw": ""any-string"",
        "type": "Literal",
        "value": "any-string",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions -In > Expressions -In > "use strict" 1`] = `
{
  "body": [
    {
      "directive": "use strict",
      "expression": {
        "raw": ""use strict"",
        "type": "Literal",
        "value": "use strict",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions -In > Expressions -In > "valueOf" in __proto 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "raw": ""valueOf"",
          "type": "Literal",
          "value": "valueOf",
        },
        "operator": "in",
        "right": {
          "name": "__proto",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions -In > Expressions -In > (NUMBER = Number, "MAX_VALUE") in NUMBER 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "expressions": [
            {
              "left": {
                "name": "NUMBER",
                "type": "Identifier",
              },
              "operator": "=",
              "right": {
                "name": "Number",
                "type": "Identifier",
              },
              "type": "AssignmentExpression",
            },
            {
              "type": "Literal",
              "value": "MAX_VALUE",
            },
          ],
          "type": "SequenceExpression",
        },
        "operator": "in",
        "right": {
          "name": "NUMBER",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions -In > Expressions -In > 123 1`] = `
{
  "body": [
    {
      "expression": {
        "raw": "123",
        "type": "Literal",
        "value": 123,
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions -In > Expressions -In > x in Number 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "x",
          "type": "Identifier",
        },
        "operator": "in",
        "right": {
          "name": "Number",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions -In > Expressions -In > x in async 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "x",
          "type": "Identifier",
        },
        "operator": "in",
        "right": {
          "name": "async",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions -In > Private identifiers outside in expressions (module with directive) > 'use strict';
class C { #field; m() { #field in #field in this; } } 1`] = `
"SyntaxError [2:34-2:35]: Unexpected token: 'PrivateField'
  1 | 'use strict';
> 2 | class C { #field; m() { #field in #field in this; } }
    |                                   ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module with directive) > 'use strict';
class C { #x; m() { #x; } } 1`] = `
"SyntaxError [2:20-2:23]: Unexpected private field
  1 | 'use strict';
> 2 | class C { #x; m() { #x; } }
    |                     ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module with directive) > 'use strict';
class C { #x; m() { (#x); } } 1`] = `
"SyntaxError [2:21-2:24]: Unexpected private field
  1 | 'use strict';
> 2 | class C { #x; m() { (#x); } }
    |                      ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module with directive) > 'use strict';
class C { #x; m() { ({ value: #x }); } } 1`] = `
"SyntaxError [2:30-2:31]: Unexpected token: 'PrivateField'
  1 | 'use strict';
> 2 | class C { #x; m() { ({ value: #x }); } }
    |                               ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module with directive) > 'use strict';
class C { #x; m() { [#x]; } } 1`] = `
"SyntaxError [2:21-2:22]: Unexpected token: 'PrivateField'
  1 | 'use strict';
> 2 | class C { #x; m() { [#x]; } }
    |                      ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module with directive) > 'use strict';
class C { #x; m() { \`\${#x}\`; } } 1`] = `
"SyntaxError [2:23-2:26]: Unexpected private field
  1 | 'use strict';
> 2 | class C { #x; m() { \`\${#x}\`; } }
    |                        ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module with directive) > 'use strict';
class C { #x; m() { for (#x in []) {} } } 1`] = `
"SyntaxError [2:25-2:26]: Unexpected token: 'PrivateField'
  1 | 'use strict';
> 2 | class C { #x; m() { for (#x in []) {} } }
    |                          ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module with directive) > 'use strict';
class C { #x; m() { typeof #x; } } 1`] = `
"SyntaxError [2:27-2:28]: Unexpected token: 'PrivateField'
  1 | 'use strict';
> 2 | class C { #x; m() { typeof #x; } }
    |                            ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module) > class C { #field; m() { #field in #field in this; } } 1`] = `
"SyntaxError [1:34-1:35]: Unexpected token: 'PrivateField'
> 1 | class C { #field; m() { #field in #field in this; } }
    |                                   ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module) > class C { #x; m() { #x; } } 1`] = `
"SyntaxError [1:20-1:23]: Unexpected private field
> 1 | class C { #x; m() { #x; } }
    |                     ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module) > class C { #x; m() { (#x); } } 1`] = `
"SyntaxError [1:21-1:24]: Unexpected private field
> 1 | class C { #x; m() { (#x); } }
    |                      ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module) > class C { #x; m() { ({ value: #x }); } } 1`] = `
"SyntaxError [1:30-1:31]: Unexpected token: 'PrivateField'
> 1 | class C { #x; m() { ({ value: #x }); } }
    |                               ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module) > class C { #x; m() { [#x]; } } 1`] = `
"SyntaxError [1:21-1:22]: Unexpected token: 'PrivateField'
> 1 | class C { #x; m() { [#x]; } }
    |                      ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module) > class C { #x; m() { \`\${#x}\`; } } 1`] = `
"SyntaxError [1:23-1:26]: Unexpected private field
> 1 | class C { #x; m() { \`\${#x}\`; } }
    |                        ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module) > class C { #x; m() { for (#x in []) {} } } 1`] = `
"SyntaxError [1:25-1:26]: Unexpected token: 'PrivateField'
> 1 | class C { #x; m() { for (#x in []) {} } }
    |                          ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (module) > class C { #x; m() { typeof #x; } } 1`] = `
"SyntaxError [1:27-1:28]: Unexpected token: 'PrivateField'
> 1 | class C { #x; m() { typeof #x; } }
    |                            ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script sloppy) > class C { #field; m() { #field in #field in this; } } 1`] = `
"SyntaxError [1:34-1:35]: Unexpected token: 'PrivateField'
> 1 | class C { #field; m() { #field in #field in this; } }
    |                                   ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script sloppy) > class C { #x; m() { #x; } } 1`] = `
"SyntaxError [1:20-1:23]: Unexpected private field
> 1 | class C { #x; m() { #x; } }
    |                     ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script sloppy) > class C { #x; m() { (#x); } } 1`] = `
"SyntaxError [1:21-1:24]: Unexpected private field
> 1 | class C { #x; m() { (#x); } }
    |                      ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script sloppy) > class C { #x; m() { ({ value: #x }); } } 1`] = `
"SyntaxError [1:30-1:31]: Unexpected token: 'PrivateField'
> 1 | class C { #x; m() { ({ value: #x }); } }
    |                               ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script sloppy) > class C { #x; m() { [#x]; } } 1`] = `
"SyntaxError [1:21-1:22]: Unexpected token: 'PrivateField'
> 1 | class C { #x; m() { [#x]; } }
    |                      ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script sloppy) > class C { #x; m() { \`\${#x}\`; } } 1`] = `
"SyntaxError [1:23-1:26]: Unexpected private field
> 1 | class C { #x; m() { \`\${#x}\`; } }
    |                        ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script sloppy) > class C { #x; m() { for (#x in []) {} } } 1`] = `
"SyntaxError [1:25-1:26]: Unexpected token: 'PrivateField'
> 1 | class C { #x; m() { for (#x in []) {} } }
    |                          ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script sloppy) > class C { #x; m() { typeof #x; } } 1`] = `
"SyntaxError [1:27-1:28]: Unexpected token: 'PrivateField'
> 1 | class C { #x; m() { typeof #x; } }
    |                            ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script strict) > 'use strict';
class C { #field; m() { #field in #field in this; } } 1`] = `
"SyntaxError [2:34-2:35]: Unexpected token: 'PrivateField'
  1 | 'use strict';
> 2 | class C { #field; m() { #field in #field in this; } }
    |                                   ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script strict) > 'use strict';
class C { #x; m() { #x; } } 1`] = `
"SyntaxError [2:20-2:23]: Unexpected private field
  1 | 'use strict';
> 2 | class C { #x; m() { #x; } }
    |                     ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script strict) > 'use strict';
class C { #x; m() { (#x); } } 1`] = `
"SyntaxError [2:21-2:24]: Unexpected private field
  1 | 'use strict';
> 2 | class C { #x; m() { (#x); } }
    |                      ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script strict) > 'use strict';
class C { #x; m() { ({ value: #x }); } } 1`] = `
"SyntaxError [2:30-2:31]: Unexpected token: 'PrivateField'
  1 | 'use strict';
> 2 | class C { #x; m() { ({ value: #x }); } }
    |                               ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script strict) > 'use strict';
class C { #x; m() { [#x]; } } 1`] = `
"SyntaxError [2:21-2:22]: Unexpected token: 'PrivateField'
  1 | 'use strict';
> 2 | class C { #x; m() { [#x]; } }
    |                      ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script strict) > 'use strict';
class C { #x; m() { \`\${#x}\`; } } 1`] = `
"SyntaxError [2:23-2:26]: Unexpected private field
  1 | 'use strict';
> 2 | class C { #x; m() { \`\${#x}\`; } }
    |                        ^^^ Unexpected private field"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script strict) > 'use strict';
class C { #x; m() { for (#x in []) {} } } 1`] = `
"SyntaxError [2:25-2:26]: Unexpected token: 'PrivateField'
  1 | 'use strict';
> 2 | class C { #x; m() { for (#x in []) {} } }
    |                          ^ Unexpected token: 'PrivateField'"
`;

exports[`Expressions -In > Private identifiers outside in expressions (script strict) > 'use strict';
class C { #x; m() { typeof #x; } } 1`] = `
"SyntaxError [2:27-2:28]: Unexpected token: 'PrivateField'
  1 | 'use strict';
> 2 | class C { #x; m() { typeof #x; } }
    |                            ^ Unexpected token: 'PrivateField'"
`;
